--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>ThesauruSource</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -113,7 +113,7 @@
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="brand" href="#">Bitstarter</a>
+	  <a class="brand" href="#">ThesauruSource</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active"><a href="#">Home</a></li>
@@ -134,18 +134,19 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
 	<div class="span12">
-	  <h1>Product</h1>
+	  <h1>ThesauruSource</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-cass.html#typography -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">The Ultimate Online Thesaurus & Reference</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
+	  <!-- Image at the top of page (before backers/progress bar) -->
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
 	
@@ -158,17 +159,17 @@
 		different in horizontal and vertical layouts, illustrating
 		media queries. -->
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>2</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$0</h3> <p>of $5,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>100</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
@@ -177,8 +178,8 @@
 	    <!-- Bootstrap progress bar -->
 	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
 	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
+	      <div class="bar bar-success" style="width: 1%;"></div>
+	      <div class="bar bar-warning" style="width: 99%;"></div>
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
@@ -201,6 +202,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
+	  <!-- Second image (immediately following backers/progress bar) -->
           <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
@@ -252,12 +254,14 @@
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse"
 		   data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  What's so great about ThesauruSource?
 		</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  ThesauruSource is a one-stop guide to quickly find everything
+		  you need to know about a word, including definitions, synonyms,
+		  antonyms, and related words, all on a single, east to navigate page.
 		</div>
 	      </div>
 	    </div>
