Edited desc in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	<div class="span12">
 	  <!-- Special typography from Bootstrap for lead paragraph. -->
 	  <!-- http://twitter.github.io/bootstrap/base-cass.html#typography -->
-	  <p class="lead">The Ultimate Online Thesaurus & Reference</p>
+	  <p class="lead">The Ultimate Online Word Reference</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
