--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
     <style type="text/css">
 
       /* Large desktop */
-      @media (min-width: 980px) {
+      @media (min-width: 980px) { 
         body {
-          padding-top: 60px;
+         padding-top: 60px;
         }
-        .linediv-l {
-          border-right: 1px white solid;
+       .linediv-l {
+         border-right: 1px white solid;
         }
-        .linediv-r {
-          border-left: 1px white solid;
-        }
+       .linediv-r {
+         border-left: 1px white solid;
+       }
       }
 
       /* Landscape phones and down */
-      @media (max-width: 480px) {
-        .copy {
-          padding: 2.5% 10%;
-        }
-        .linediv-l {
-          border-bottom: 1px white solid;
-        }
-        .linediv-r {
-          border-top: 1px white solid;
-        }
+      @media (max-width: 480px) { 
+       .copy {
+         padding: 2.5% 10%;
+       }
+       .linediv-l {
+         border-bottom: 1px white solid;
+       }
+       .linediv-r {
+         border-top: 1px white solid;
+       }
       }
 
       /* All form factors */
 
       /* Main body and headings */
-      body {
+      body{
         font-family: 'Open Sans', Helvetica, Arial, sans-serif;
       }
       .heading, .subheading {
@@ -52,7 +52,7 @@
         text-align: center;
       }
       p.lead {
-        paddint-top: 1.5%;
+        padding-top: 1.5%;
         font-size: 24px;
         line-height: 30px;
       }
@@ -73,7 +73,7 @@
         padding: 3% 0%;
       }
       .video, .thermometer, .order, .social, .statistics {
-        text-align: center:
+        text-align: center;
       }
       .statistics h3, .statistics p {
         color: white;
@@ -96,7 +96,7 @@
         font-size: 11px;
       }
       .footer a {
-        font-size: 11px;
+        color: #ccccff;
       }
     </style>
   </head>
@@ -105,23 +105,46 @@
     <!-- Mobile-friendly navbar adapted from example. -->
     <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="anvbar-inner">
-	<div class="container">
-	  <button type="button" class="btn btn-navbar"
-		  data-toggle="collapse" data-target=".nav-collapse">
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
-	    <span class="icon-bar"></span>
-	  </button>
-	  <a class="brand" href="#">Thesaurus</a>
-	  <div class="nav-collapse collapse">
-	    <ul class="nav">
-	      <li class="active"><a href="#">Home</a></li>
-	      <li><a href="#about">About</a></li>
-	      <li><a href="#contact">Contact</a></li>
-	    </ul>
-	  </div><!--/.nav-collapse -->
-	</div>
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Bitstarter</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
+    <!-- Mobile-friendly navbar adapted from example. -->
+    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar"
+                  data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Bitstarter</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
 
@@ -133,67 +156,74 @@
       <!-- www.google.com/fonts/specimen/Ubuntu -->
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
-	<div class="span12">
-	  <h1>Thesaurus</h1>
-	</div>
-      </div>
+        <div class="span12">
+          <h1>Product: Development Version</h1>
+        </div>
+      </div> 
       <div class="row-fluid subheading">
-	<div class="span12">
-	  <!-- Special typography from Bootstrap for lead paragraph. -->
-	  <!-- http://twitter.github.io/bootstrap/base-cass.html#typography -->
-	  <p class="lead">The Ultimate Online Word Reference</p>
-	</div>
+        <div class="span12">
+          <!-- Special typography from Bootstrap for lead paragraph. -->
+          <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+          <p class="lead">One sentence description.</p>
+        </div>
       </div>
       <div class="row-fluid pitch">
-	<div class="span5 offset1 video">
-	  <!-- Image at the top of page (before backers/progress bar) -->
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
-	</div>
-	
-	<!-- We define a new 'actions' div to contain stats, order, and share buttons. -->
-	<div class="span5 actions">
-	  <div class="span8 offset2">
-	    <div class="statistics">
-	      <div class="span4">
-		<!-- linediv-l and linediv-r give dividing lines that look
-		different in horizontal and vertical layouts, illustrating
-		media queries. -->
-		<div class="linediv-l">
-		  <h3>2</h3> <p>backers</p>
-		</div>
-	      </div>
-	      <div class="span4">
-		<div class="linediv-c">
-		  <h3>$0</h3> <p>of $5,000</p>
-		</div>
-	      </div>
-	      <div class="span4">
-		<div class="linediv-r">
-		  <h3>100</h3> <p>days left</p>
-		</div>
-	      </div>
-	    </div>
-	  </div>
-	  <div class="span10 offset1">
-	    <!-- Bootstrap progress bar -->
-	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
-	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 1%;"></div>
-	      <div class="bar bar-warning" style="width: 99%;"></div>
-	    </div>
-	  </div>
-	  <div class="span6 offset3 order">
-	    <!-- Standard Bootstrap button. -->
-	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-	    <button class="btn btn-success btn-large">Preorder</button>
-	  </div>
-	  <div class="span8 offset2 social">
-	    <!-- Social buttons are not included in default Bootstrap. -->
-	    <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
-	  </div>
-	</div>
+        <div class="span5 offset1 video">
+          <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
+        </div>
+
+        <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
+        <div class="span5 actions">
+          <div class="row-fluid">
+          <div class="span8 offset2">
+            <div class="row-fluid statistics">
+              <div class="span4">
+                <!-- linediv-l and linediv-r give dividing lines that look
+                different in horizontal and vertical layouts, illustrating
+                media queries. -->
+                <div class="linediv-l">
+                <h3>1000</h3> <p>backers</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-c">
+                  <h3>$6000</h3> <p>of $10,000</p>
+                </div>
+              </div>
+              <div class="span4">
+                <div class="linediv-r">
+                <h3>10</h3> <p>days left</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span10 offset1">
+            <!-- Bootstrap progress bar -->
+            <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+            <div class="thermometer progress active">
+              <div class="bar bar-success" style="width: 60%;"></div>
+              <div class="bar bar-warning" style="width: 40%;"></div>
+            </div>
+          </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span6 offset3 order">
+            <!-- Standard Bootstrap button. -->
+            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+            <button class="btn btn-success btn-large">Preorder</button>
+          </div>
+          </div>
+          <div class="row-fluid">
+          <div class="span8 offset2 social">
+            <!-- Social buttons are not included in default Bootstrap. -->
+            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+          </div>
+          </div>
+        </div>
+        </div>
       </div>
 
       <!-- Beyond this part the marketing copy begins. -->
@@ -202,8 +232,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-	  <!-- Second image (immediately following backers/progress bar) -->
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
           <p>
@@ -239,61 +268,59 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
         </div>
       </div>
-      
-      <!-- For the FAQ, we introduce a little bit of JS, using the accordian. -->
+
+      <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
       <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
       <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->
       <div class="row-fluid faq">
-	<div class="span10 offset1">
-	  <h3>FAQ</h3>
-	  <div class="accordion" id="accordian2">
-	    <div class="accordion-group">
-	      <div class="accordion-heading">
-		<a class="accordion-toggle" data-toggle="collapse"
-		   data-parent="#accordion2" href="#collapseOne">
-		  What's so great about ThesauruSource?
-		</a>
-	      </div>
-	      <div id="collapseOne" class="accordion-body collapse">
-		<div class="accordion-inner">
-		  ThesauruSource is a one-stop guide to quickly find everything
-		  you need to know about a word, including definitions, synonyms,
-		  antonyms, and related words, all on a single, east to navigate page.
-		</div>
-	      </div>
-	    </div>
-	    <div class="accordion-group">
-	      <div class="accordion-heading">
-		<a class="accordion-toggle" data-toggle="collapse"
-		   data-parent="#accordion2" href="#collapseTwo">
-		  What's a Frequently Asked Question?
-		</a>
-	      </div>
-	      <div id="collapseTwo" class="accordion-body collapse">
-		<div class="accordion-inner">
-		  A question which is commonly asked by users.
-		</div>
-	      </div>
-	    </div>
-	  </div>
-	</div>
+          <div class="span10 offset1">
+            <h3>FAQ</h3>
+            <div class="accordion" id="accordion2">
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseOne">
+                    What does FAQ stand for?
+                  </a>
+                </div>
+                <div id="collapseOne" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    Frequently Asked Question.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#accordion2" href="#collapseTwo">
+                    What's a Frequently Asked Question?
+                  </a>
+                </div>
+                <div id="collapseTwo" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                    A question which is commonly asked by users.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
       </div>
 
       <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
       <!-- http://creativecommons.org/licenses/ -->
       <div class="row-fluid footer">
-	<div class="span12">
-	  <p>This work is licensed under
-	    the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
-	      By-SA 3.0
-	    </a>, without all the cruft that would otherwise be
-	    put at the bottom of the page.</p>
-	  </div>
-	</div>
+        <div class="span12">
+          <p>This work is licensed under
+            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
+              By-SA 3.0
+            </a>, without all the cruft that would otherwise be
+            put at the bottom of the page.</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
